force-app/demo/objects/Smart_Device_Event__e/Smart_Device_Event__e.object-meta.xml
<CustomObject>
    <description>An event that is send from a connected smart device</description>
    <label>Smart Device Event</label>
    <pluralLabel>Smart Device Events</pluralLabel>
</CustomObject>