force-app/demo/objects/Smart_Device_Event__e/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>