force-app/demo/objects/Smart_Device_Event__e/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>Optional info for the reason of the status</description>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>